--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rc-24-fisrt-project",
   "version": "14.0.0",
   "type": "module",
-  "homepage": "https://inf1nitiveIT.github.io/RC-24-second-project",
+  "homepage": "https://inf1nitiveIT.github.io/RC-24-third-project",
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
@@ -40,7 +40,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.3",
     "faker": "5.5.3",
-    "gh-pages": "^6.3.0",
+    "gh-pages": "6.3.0",
     "jsdom": "22.1.0",
     "postcss": "8.4.49",
     "tailwindcss": "3.4.16",
