--- a/package.json
+++ b/package.json
@@ -13,10 +13,6 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "axios": "1.7.9",
-    "classnames": "2.3.2",
-    "history": "5.3.0",
-    "http-status-codes": "2.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "1.3.0",
@@ -24,9 +20,6 @@
     "react-router-dom": "6.16.0"
   },
   "devDependencies": {
-    "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.5.1",
-    "@types/faker": "5.5.9",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.11",
     "@types/testing-library__jest-dom": "5.14.9",
@@ -40,7 +33,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.3",
     "faker": "5.5.3",
-    "gh-pages": "^6.3.0",
+    "gh-pages": "6.3.0",
     "jsdom": "22.1.0",
     "postcss": "8.4.49",
     "tailwindcss": "3.4.16",
